<resources>
    <string name="app_name">RaidhoRun</string>
    <string name="games_app_id">363596102596</string>
    <string name="welcome">Welcome</string>
    <string name="tv_login_title">How far are you able to go?</string>
    <string name="et_email">Enter email address</string>
    <string name="et_password">Enter password</string>
    <string name="btn_login">Log In</string>
    <string name="tv_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Send password</string>
    <string name="tv_terms">I have read and accept the </string>
    <string name="tv_conditions">terms and conditions</string>
    <string name="btn_sign_google">Google</string>
    <string name="btn_sign_facebook">Facebook</string>
    <string name="error_empty_email">Email field cannot be empty</string>
    <string name="error_empty_password">Password field cannot be empty</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="bar_title_terms">Terms and Conditions of Use</string>
    <string name="terms1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent rhoncus convallis metus at pretium. Vivamus at lacinia leo. Praesent velit elit, suscipit sit amet pulvinar id, imperdiet ac massa. Quisque molestie lectus rhoncus urna tempor, ut lacinia mi tempor. Praesent volutpat, ligula eget lobortis cursus, mauris libero consequat ligula, nec scelerisque erat ipsum tempor justo. Aliquam ornare faucibus augue vel faucibus. Ut sollicitudin commodo tortor eu faucibus. Vestibulum lacinia ligula sed tortor auctor, vitae sollicitudin lorem dapibus. Phasellus sed tincidunt odio.</string>
    <string name="terms2">Praesent arcu nisi, auctor quis tempor id, vehicula non nulla. Sed a fermentum tellus, quis pharetra lorem. Fusce vehicula libero in ultricies varius. Suspendisse vel velit tortor. Aliquam non nisi eget lectus tempor consectetur sed in magna. Nullam tincidunt, nibh ut sodales suscipit, ante est luctus purus, sed pellentesque ipsum massa et quam. Proin sed sapien ultrices ex aliquet elementum sed et erat. Sed tincidunt felis sapien, a suscipit massa cursus et. Phasellus auctor tellus ac neque maximus accumsan. Morbi sit amet odio nec sapien pharetra elementum maximus id odio. Integer laoreet, neque id efficitur auctor, magna massa consequat justo, quis vehicula ipsum massa at sem. Morbi in ornare sapien, in luctus mauris. </string>
    <string name="terms3">Sed id libero auctor, lacinia lectus a, consequat nisl. Nam quis suscipit purus. Fusce at congue quam. Etiam congue imperdiet bibendum. Etiam at porttitor ipsum. Donec consectetur sapien in neque tempus tempus. Sed vulputate rutrum ultrices. Praesent in est leo. Suspendisse euismod purus id urna tempus pellentesque. Praesent condimentum nisl sit amet purus pulvinar sagittis. Cras purus felis, hendrerit et ornare ut, molestie id orci. Integer dictum consequat leo, id pretium urna tempus et. Donec nibh ante, laoreet id lorem vitae, vestibulum sollicitudin lorem. </string>
    <string name="skip_onboarding">SKIP</string>
    <string name="bar_title">Home</string>
    <string name="menu_running">Running</string>
    <string name="menu_record">History</string>
    <string name="menu_clearPreferences">Reset Preferences</string>
    <string name="menu_signOut">Sign Out</string>
    <string name="user">blabla@raidorun.com</string>
    <string name="nav_hi">He who moves his legs, moves his heart. Move it, heart!</string>
    <string name="level">Level</string>
    <string name="time">4d 03:56:23</string>
    <string name="distance">DISTANCE</string>
    <string name="distance_progress">30%</string>
    <string name="runs">RUNS</string>
    <string name="progress_runs">5/10</string>
    <string name="total_distance">35.6/500 KM</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="bar_title_record">History</string>
    <string name="orderby_dateZA">Date (Newest first)</string>
    <string name="orderby_durationZA">Duration (Longest first)</string>
    <string name="orderby_distanceZA">Distance (Longest first)</string>
    <string name="orderby_avgspeedZA">Avg. Speed (Highest first)</string>
    <string name="orderby_maxspeedZA">Max. Speed (Highest first)</string>
    <string name="orderby_dateAZ">Date (Oldest first)</string>
    <string name="orderby_durationAZ">Duration (Shortest first)</string>
    <string name="orderby_distanceAZ">Distance (Shortest first)</string>
    <string name="orderby_avgspeedAZ">Avg. Speed (Lowest first)</string>
    <string name="orderby_maxspeedAZ">Max. Speed (Lowest first)</string>
    <string name="title_distance">DISTANCE</string>
    <string name="current_distance">0.0</string>
    <string name="current_distance_ux">KMs.</string>
    <string name="record_distance">20.16</string>
    <string name="title_avg_speed">AVG. SPEED</string>
    <string name="current_avg_speed">0.0</string>
    <string name="current_avg_speed_ux">KM/H</string>
    <string name="record_avg_speed">13.5</string>
    <string name="title_speed">SPEED</string>
    <string name="current_speed">0.0</string>
    <string name="current_speed_ux">KM/H</string>
    <string name="record_speed">16.3</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="finish">Finish</string>
    <string name="rounds">Round 1</string>
    <string name="time_running">Running Time</string>
    <string name="time_walking">Walking Time</string>
    <string name="walking_clock">00:00</string>
    <string name="init_stop_watch_value">00:00:00</string>
    <string name="map_center_location">CENTER</string>
    <string name="title_map">MAP</string>
    <string name="interval_mode">Interval Run</string>
    <string name="interval_duration">INTERVAL DURATION</string>
    <string name="interval_duration_UX">MIN.</string>
    <string name="running_time">02:30</string>
    <string name="running_time_UX">RUN</string>
    <string name="walking_time_div"> / </string>
    <string name="walking_time">02:30</string>
    <string name="walking_time_UX">WALK</string>
    <string name="challenge_mode">Set Goal</string>
    <string name="challenge_duration">DURATION</string>
    <string name="challenge_duration_HHMM">:</string>
    <string name="challenge_duration_MMSS">:</string>
    <string name="challenge_duration_UX">HH:MM:SS</string>
    <string name="challenge_distance">DISTANCE</string>
    <string name="challenge_distance_UX">KM</string>
    <string name="notify_goal_reached">Notify When Goal Is Reached</string>
    <string name="auto_finish">Auto-End Run</string>
    <string name="title_total_time">Total Time</string>
    <string name="total_time">13:24:58</string>
    <string name="title_popup">Run Summary</string>
    <string name="title_mode_popup">Mode</string>
    <string name="PopUpTotalRuns">Runs: </string>
    <string name="PopUpTotalDistance">Total Distance (km): </string>
    <string name="PopUpTotalTime">Total Time: </string>
    <string name="NoDataWarning">No data found. Make sure GPS is active to track your run</string>
    <string name="PopUpDurationTitle">DURATION</string>
    <string name="PopUpChallengeTitle">CHALLENGE</string>
    <string name="PopUpIntervalTitle">INTERVALS</string>
    <string name="PopUpDistanceTitle">DISTANCE</string>
    <string name="PopUpAvgSpeedTitle">AVG. SPEED</string>
    <string name="PopUpMaxSpeedTitle">MAX. SPEED</string>
    <string name="PopUpUnevennessTitle">ELEVATION</string>
    <string name="duration_run">00:00:00</string>
    <string name="challenge_duration_run">01:00:00</string>
    <string name="interval_duration_run">5min (1:45 / 3:15)</string>
    <string name="textNull"></string>
    <string name="textNoData">-</string>
    <string name="medalDistanceDescription">Distance [Personal Best]</string>
    <string name="medalAvgSpeedDescription">Max Speed [Personal Best]</string>
    <string name="medalMaxSpeedDescription">Avg. Speed [Personal Best]</string>
    <string name="alertActivationGPSTitle">Allow location access</string>
    <string name="alertActivationGPSDescription">To track your distance and speed, GPS access is required</string>
    <string name="ignoreActivationGPS">Ignore</string>
    <string name="acceptActivationGPS">Activate</string>
    <string name="alertClearPreferencesTitle">Do you want to clear your running preferences?</string>
    <string name="alertClearPreferencesDescription">We will reset your music and workout settings (mode and intervals) from your last session.</string>
    <string name="CardAvgSpeedTitle">AVG. SPEED</string>
    <string name="CardMaxSpeedTitle">MAX. SPEED</string>
    <string name="CardMedalDistance">Km [PB]</string>
    <string name="CardMedalAvgSpeed">Max [PB]</string>
    <string name="CardMedalMaxSpeed">Avg [PB]</string>
    <string name="alertDeleteRecordRaceTitle">Are you sure you want to delete this record?</string>
    <string name="alertDeleteRecordRaceDescription">This will permanently delete the record</string>
    <string name="onboarding_title_1">Move your way</string>
    <string name="onboarding_desc_1">Choose between running, biking, or skating and start your journey toward a more active life. You decide when, how, and where to train.</string>
    <string name="onboarding_title_2">Every step counts</string>
    <string name="onboarding_desc_2">Track your progress with maps, speed, stopwatch, and personalized goals. Beat your records and reach new levels in each sport.</string>
    <string name="onboarding_title_3">Turn your workout into an achievement</string>
    <string name="onboarding_desc_3">Earn medals, level up, and save your best moments with photos during your route. RaidoRun turns every run into an experience!</string>
    <string name="permissions_required">You must provide permissions</string>
    <string name="image_saved">Image saved</string>
    <string name="image_save_error">Error saving image</string>
    <string name="ok">OK</string>
    <string name="exit_title">Exit App</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="positive_yes">Yes</string>
    <string name="negative_no">No</string>
    <string name="settings_reset">Your settings have been reset</string>
    <string name="new_personal_records">Personal Records</string>
    <string name="new_personal_record_notifications">New personal record notifications</string>
    <string name="personal_best_in">Personal best in</string>
    <string name="distance_covered">distance covered</string>
    <string name="average_speed">average speed</string>
    <string name="maximum_speed_reached">maximum speed reached</string>
    <string name="accept_terms_and_retry">Accept the terms and retry</string>
    <string name="must_accept_terms">You must accept the terms and conditions</string>
    <string name="google_sign_in_error">Error signing in with Google</string>
    <string name="auth_error">Authentication error:</string>
    <string name="must_accept_terms_and_conditions">You have to accept the Terms and Conditions</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="user_not_found">User not found</string>
    <string name="password_reset_email_sent">An email has been sent to</string>
    <string name="password_reset_email_reset">to reset your password</string>
    <string name="error_sending_email">Error sending email</string>
    <string name="error_finding_user">Error finding user</string>
    <string name="user_creation_failed">Could not create user</string>
    <string name="record_deleted">Record deleted</string>
    <string name="error_deleting_record">Error deleting record</string>
    <string name="error_saving_image">Error saving image:</string>
    <string name="image">Image</string>
    <string name="saved">saved</string>
    <string name="users">Users</string>
</resources>