<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_item_main"
            android:icon="@drawable/camino"
            android:title="@string/menu_running" />

        <item android:id="@+id/nav_item_record"
            android:icon="@drawable/history"
            android:title="@string/menu_record" />
    </group>

    <item android:title="Cuenta">
        <menu>
            <item android:id="@+id/nav_item_clearPreferences"
                android:icon="@android:drawable/ic_popup_sync"
                android:title="@string/menu_clearPreferences" />

            <item android:id="@+id/nav_item_signOut"
                android:icon="@drawable/sign_out"
                android:title="@string/menu_signOut" />
        </menu>
    </item>
</menu>